[package]
name = "levo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
shellexpand = "3.1.0"
