[package]
name = "commute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive", "wrap_help"] }
directories = "5.0.1"
gio = "0.17.10"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.177", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.44"
